# Shogi

./: .gitignore  CMakeLists.txt  README.md
src/: App.c  App.h  Logger.c  Logger.h  Model.c  Model.h  README.md  ResourceManager.c  ResourceManager.h  Utils.h
